--- a/index.html
+++ b/index.html
@@ -5,25 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adding CSS in HTML Webpage</title>
-    <style>
-        #cover-pic {
-            width: 100%;
-            height: auto;
-        }
-
-        #headtag {
-            font-size: 48px;
-            text-align: center;
-        }
-
-        .page-content {
-            font-size: 24px;
-            line-height: 1.4;
-            text-align: center;
-            padding-left: 32px;
-            padding-right: 32px;
-        }
-    </style>
+    <link href="./index.css" rel="stylesheet" type="text/css">
 </head>
 
 <body style="margin: 0;">
@@ -40,8 +22,6 @@
         time they are better
         able to assess the financial impact of the pandemic and calculate a clear projection for the year ahead,” the
         governing body said.</p>
-
-
 </body>
 
 </html>
